# SAEEngineCore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  formatting.clang_format
.github/workflows/: cmake.yml  stylecheck.yml
SAEEngineCore/: CMakeLists.txt
SAEEngineCore/examples/: CMakeLists.txt
SAEEngineCore/examples/temp/: CMakeLists.txt  temp.cpp
SAEEngineCore/include/: SAEEngineCore.h
SAEEngineCore/source/: SAEEngineCore.cpp
SAEEngineCore/submodules/: CMakeLists.txt
SAEEngineCore/submodules/artist/: CMakeLists.txt
SAEEngineCore/submodules/artist/include/: SAEEngineCore_Artist.h
SAEEngineCore/submodules/artist/source/: SAEEngineCore_Artist.cpp
SAEEngineCore/submodules/environment/: CMakeLists.txt  Environment.cpp  Environment.h
SAEEngineCore/submodules/environment/include/: Environment.h  SAEEngineCore_Environment.h
SAEEngineCore/submodules/environment/source/: Environment.cpp  SAEEngineCore_Environment.cpp
SAEEngineCore/submodules/environment/tests/: CMakeLists.txt  window_test.cpp
SAEEngineCore/submodules/environment/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/environment_wrap/: CMakeLists.txt
SAEEngineCore/submodules/error/: CMakeLists.txt  Error.cpp  Error.h
SAEEngineCore/submodules/error/tests/: CMakeLists.txt  error_test.cpp
SAEEngineCore/submodules/event/: CMakeLists.txt  Event.h
SAEEngineCore/submodules/event/include/: SAEEngineCore_Event.h  SAEEngineCore_EventType.h
SAEEngineCore/submodules/event/source/: event_enum.txt
SAEEngineCore/submodules/event/tests/: CMakeLists.txt
SAEEngineCore/submodules/event/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/event/tests/serial_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/filehandling/: CMakeLists.txt  FileHandling.c++  FileHandling.cpp  FileHandling.h
SAEEngineCore/submodules/filehandling/include/: SAEEngineCore_FileHandling.h
SAEEngineCore/submodules/filehandling/source/: SAEEngineCore_FileHandling.cpp
SAEEngineCore/submodules/filehandling/tests/: CMakeLists.txt  FILE_TYPE_test.cpp
SAEEngineCore/submodules/filehandling/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/filehandling/tests/open_file_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/filehandling/tests/type_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/gl_object/: CMakeLists.txt
SAEEngineCore/submodules/gl_object/include/: SAEEngineCore_glObject.h
SAEEngineCore/submodules/gl_object/source/: SAEEngineCore_glObject.cpp
SAEEngineCore/submodules/gl_object/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/input/: CMakeLists.txt
SAEEngineCore/submodules/input/include/: SAEEngineCore_Input.h
SAEEngineCore/submodules/input/source/: SAEEngineCore_Input.cpp
SAEEngineCore/submodules/input/tests/build_test/: test.cpp
SAEEngineCore/submodules/iso/: CMakeLists.txt
SAEEngineCore/submodules/iso/include/: SAEEngineWorld_Iso.h
SAEEngineCore/submodules/iso/source/: SAEEngineWorld_Iso.cpp
SAEEngineCore/submodules/logging/: CMakeLists.txt  Logging.cpp  Logging.h
SAEEngineCore/submodules/logging/include/: SAEEngineCore_Logging.h
SAEEngineCore/submodules/logging/source/: SAEEngineCore_Logging.cpp
SAEEngineCore/submodules/logging/tests/build_test/: CMakeLists.txt
SAEEngineCore/submodules/object/: CMakeLists.txt
SAEEngineCore/submodules/object/include/: SAEEngineCore_Object.h
SAEEngineCore/submodules/object/source/: SAEEngineCore_Object.cpp
SAEEngineCore/submodules/object/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/shader/: CMakeLists.txt
SAEEngineCore/submodules/shader/include/: SAEEngineCore_Shader.h
SAEEngineCore/submodules/shader/source/: SAEEngineCore_Shader.cpp
SAEEngineCore/submodules/texture/: CMakeLists.txt
SAEEngineCore/submodules/texture/include/: SAEEngineCore_Texture.h
SAEEngineCore/submodules/texture/source/: SAEEngineCore_Texture.cpp
SAEEngineCore/submodules/texture/tests/: CMakeLists.txt
SAEEngineCore/submodules/ui/: CMakeLists.txt
SAEEngineCore/submodules/ui/include/: SAEEngineCore_UI.h
SAEEngineCore/submodules/ui/source/: SAEEngineCore_UI.cpp
SAEEngineCore/submodules/ui/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/widget/: CMakeLists.txt
SAEEngineCore/submodules/widget/include/: SAEEngineCore_Widget.h
SAEEngineCore/submodules/widget/source/: SAEEngineCore_Widget.cpp
SAEEngineCore/submodules/widget/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/submodules/window/: CMakeLists.txt
SAEEngineCore/submodules/window/include/: SAEEngineCore_Window.h
SAEEngineCore/submodules/window/source/: SAEEngineCore_Window.cpp
SAEEngineCore/submodules/window/tests/build_test/: CMakeLists.txt  test.cpp
SAEEngineCore/tests/: CMakeLists.txt  test.cpp
SAEEngineCore/tests/build_test/: CMakeLists.txt  test.cpp
config/: SAEEngineCore_Config.h  SAEEngineCore_Config.h.in
format/: styleguide.txt
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
templates/submodule/: CMakeLists.txt
templates/submodule_sourcedir/: CMakeLists.txt
templates/test/: CMakeLists.txt  test.cpp
