add_subdirectory("artist")
add_subdirectory("logging")
add_subdirectory("environment")
add_subdirectory("input")
add_subdirectory("texture")
add_subdirectory("shader")
add_subdirectory("filehandling")
add_subdirectory("event")
add_subdirectory("error")
add_subdirectory("ui")
add_subdirectory("widget")
add_subdirectory("window")
add_subdirectory("object")
add_subdirectory("gl_object")


### 
### Somewhat temporary as I work out exactly what this new module will do
###

add_subdirectory("iso")
