add_subdirectory("artist")
add_subdirectory("logging")
add_subdirectory("environment")
add_subdirectory("input")
add_subdirectory("texture")

add_subdirectory("event")

add_subdirectory("ui")
add_subdirectory("widget")
add_subdirectory("window")
add_subdirectory("object")
add_subdirectory("gl_object")




